@@ -12,6 +12,12 @@ the project at www.freshmeat.net.  This is currently the only reliable
 way of finding out about new releases since there is no shapelib specific
 mailing list.<p>
 
+<b>Release 1.4.1</b>:
+<ul>
+<li> Fix a regression regarding re-writing the last shape
+        of a file (<a href="https://trac.osgeo.org/gdal/ticket/7031">GDAL #7031</a>)
+</ul>
+
 <b>Release 1.4.0</b>:
 <ul>
 <li> Old Makefile build replaced by autoconf/automake (by Sandro Mani)
