@@ -1,3 +1,7 @@
+2017-09-14  Even Rouault  <even.rouault at spatialys.com>
+
+	* Shapelib 1.4.1 released
+
 2017-09-10  Even Rouault  <even.rouault at spatialys.com>
 
 	* shpopen.c: resync with GDAL copy. Make sure to zero terminate all
